--- a/src/app/pages/missoes/missoes.component.html
+++ b/src/app/pages/missoes/missoes.component.html
@@ -17,14 +17,12 @@
     <img src="/img/logo.svg" id="logo" alt="Logo Corn Coincs">
    
     <div class="container-apps">
-      <a id="MG" routerLink="/memorygame-login" class="card-app">
+      <a id="game1" routerLink="/memorygame-login" class="card-app">
 
       </a>
-      <a href="#" class="card-app">
-        App 2
+      <a id="game2" class="card-app">
       </a>
-      <a href="#" class="card-app">
-        App 3
+       <a id="game3" class="card-app">
       </a>
     </div>
   </div>
