--- a/src/app/pages/missoes/missoes.component.html
+++ b/src/app/pages/missoes/missoes.component.html
@@ -1,6 +1,6 @@
 <div class="bg-container">
 <header>
-  <nav class="nav">
+  <nav>
     <a routerLink="/menu" >
       <img src="/img/esquerda.svg" class="back-button" alt="Voltar para o menu">
     </a>
