--- a/src/app/pages/educacoincs/educacoincs.component.html
+++ b/src/app/pages/educacoincs/educacoincs.component.html
@@ -1,6 +1,6 @@
-<header class="header">
+<header>
     <nav class="nav">
-        <a routerLink="/menu" class="link-img-back">
+        <a routerLink="/menu">
             <img src="img/esquerda.svg" alt="Voltar" class="back-button">
         </a>
 
