--- a/src/app/pages/educacoincs/educacoincs.component.css
+++ b/src/app/pages/educacoincs/educacoincs.component.css
@@ -109,7 +109,7 @@ header {
 
 .back-button {
     position: absolute;
-    left: 25px;
+    left: 12px;
     top: 10%;
     width: 150px;
     cursor: pointer;
@@ -475,6 +475,79 @@ header {
     font-size: 0.875rem;
 }
 
+
+
+
+.banner-carousel {
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+  position: relative;
+  margin: 2rem 0;
+}
+
+.banner-track {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  transition: transform .8s ease-in-out;
+}
+
+.banner-slide {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* mantém corte elegante nas imagens */
+}
+
+/* Mobile ajuste se quiser */
+@media (max-width: 768px) {
+  .banner-carousel {
+    height: 180px;
+  }
+}
+
+.carousel-container {
+  width: 100%;
+  overflow: hidden;
+}
+
+/* IMAGENS — sempre cobrir bem o espaço */
+.carousel-item {
+  width: 100%;
+  height: 40vh; /* padrão para desktops */
+}
+
+.carousel-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* Evita que a imagem distorça */
+  object-position: center;
+}
+
+/* ======== MOBILE ======== */
+@media (max-width: 600px) {
+  .carousel-item {
+    height: 200px;
+  }
+}
+
+/* ======== TABLETS ======== */
+@media (min-width: 601px) and (max-width: 1024px) {
+  .carousel-item {
+    height: 280px;
+  }
+}
+
+/* ======== NOTEBOOKS ======== */
+@media (min-width: 1025px) and (max-width: 1440px) {
+  .carousel-item {
+    height: 350px;
+  }
+}
+
+
+
 /* Combos Section */
 .combos {
     padding: 4rem 2rem;
@@ -712,7 +785,7 @@ header {
 
     .back-button {
         margin-top: 10px;
-        width: 25%;
+        width: 20%;
     }
 
     .botao-escolas {
