--- a/src/app/pages/educacoincs/educacoincs.component.html
+++ b/src/app/pages/educacoincs/educacoincs.component.html
@@ -62,6 +62,7 @@
     </section>
 
 
+
     <!-- Products Section -->
     <section id="produtos" class="products">
         <div class="section-header">
@@ -83,7 +84,7 @@
                     <div class="product-footer">
                         <span class="product-price">R$ 34,90</span>
                         <button class="btn btn-primary btn-small">
-                            <i class="ph ph-shopping-cart-simple"></i> Adicionar
+                            <i class="ph ph-shopping-cart-simple"></i> Comprar
                         </button>
                     </div>
                 </div>
@@ -101,7 +102,7 @@
                     <div class="product-footer">
                         <span class="product-price">R$ 49,50</span>
                         <button class="btn btn-primary btn-small">
-                            <i class="ph ph-shopping-cart-simple"></i> Adicionar
+                            <i class="ph ph-shopping-cart-simple"></i> Comprar
                         </button>
                     </div>
                 </div>
@@ -119,7 +120,7 @@
                     <div class="product-footer">
                         <span class="product-price">R$ 72,00</span>
                         <button class="btn btn-primary btn-small">
-                            <i class="ph ph-shopping-cart-simple"></i> Adicionar
+                            <i class="ph ph-shopping-cart-simple"></i> Comprar
                         </button>
                     </div>
                 </div>
@@ -142,7 +143,7 @@
                             <span class="product-price gradient">R$ 179,90</span>
                         </div>
                         <button class="btn btn-primary btn-small">
-                            <i class="ph ph-shopping-cart-simple"></i> Adicionar
+                            <i class="ph ph-shopping-cart-simple"></i> Comprar
                         </button>
                     </div>
                 </div>
@@ -152,6 +153,13 @@
     </section>
 
 
+    <section class="banner-carousel">
+  <div class="banner-track" [style.transform]="getTransform()">
+    <img *ngFor="let img of banners" [src]="img" class="banner-slide" alt="Promo Banner">
+  </div>
+</section>
+
+    
     <!-- Combos Section -->
     <section id="combos" class="combos">
         <div class="section-header">
