--- a/src/app/pages/memorygame/memorygame.component.html
+++ b/src/app/pages/memorygame/memorygame.component.html
@@ -1,7 +1,7 @@
 <div class="bg-container">
   <header class="cabecalho">
-    <a routerLink="/memorygame-login" class="botao-voltar">
-      <img src="/img/esquerda.svg" alt="">
+    <a routerLink="/memorygame-login">
+      <img src="/img/esquerda.svg" class="botao-voltar">
     </a>
 
     <img src="/img/logo.svg" class="logo">
