--- a/src/app/pages/memorygame-login/memorygame-login.component.html
+++ b/src/app/pages/memorygame-login/memorygame-login.component.html
@@ -1,7 +1,7 @@
 <div class="bg-container">
 <header class="cabecalho">
-    <a routerLink="/missoes" class="botao-voltar">
-      <img src="/img/esquerda.svg" alt="">
+    <a routerLink="/missoes">
+      <img src="/img/esquerda.svg" class="botao-voltar" alt="">
     </a>
 
     <img src="/img/logo.svg" class="logo">
