--- a/src/app/pages/memorygame/memorygame.component.css
+++ b/src/app/pages/memorygame/memorygame.component.css
@@ -65,7 +65,6 @@
     z-index: 100;
 }
 
-
 /* --- MAIN --- */
 main {
     display: flex;
@@ -243,3 +242,81 @@ footer {
 .card[data-item="taurusCard"] .front {
     background-image: url("/img/cards/taurus.png");
 }
+
+
+/* ======================================================= */
+/* 📱 CELULAR — Até 576px */
+/* ======================================================= */
+@media (max-width: 576px) {
+
+    .logo {
+        width: 50%;
+    }
+
+    .title {
+        font-size: 45px;
+        text-align: center;
+    }
+
+    .btn-register {
+        width: 180px;
+        padding: 18px;
+        font-size: 18px;
+    }
+
+    .botao-som {
+        font-size: 20px;
+    }
+
+    .botao-voltar {
+        width: 15%;
+    }
+
+    footer {
+        font-size: 0.75rem;
+    }
+}
+
+
+/* ======================================================= */
+/* 📲 TABLET — 577px até 1024px */
+/* ======================================================= */
+@media (min-width: 577px) and (max-width: 1024px) {
+    .logo {
+        width: 45%;
+    }
+
+    .title {
+        font-size: 60px;
+        text-align: center;
+    }
+
+    .btn-register {
+        width: 180px;
+        padding: 18px;
+        font-size: 18px;
+    }
+
+    .botao-som {
+        font-size: 40px;
+    }
+
+    .botao-voltar {
+        width: 15%;
+    }
+
+}
+
+    /* ======================================================= */
+    /* 💻 NOTEBOOK — 1025px até 1366px */
+    /* ======================================================= */
+    @media (min-width: 1025px) and (max-width: 1366px) {
+
+        .title {
+            font-size: 90px;
+        }
+
+        .logo {
+            width: 300px;
+        }
+    }
