--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,11 +1,10 @@
 .bg-container {
+    width: 100%;
+    height: 100vh;
     background-image: url('/img/background1.jpeg');
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
-    min-height: 100vh;
-    width: 100%;
-    display: flex;
+    background-attachment: fixed;
 }
 
     /* Botão de voltar no canto */
