--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@ html {
     padding: 0;
     min-height: 100%;
     scroll-behavior: smooth;
+    cursor: url('/img/pointer.png'), auto;
 }
 
 button, a, .card {
